[gd_scene load_steps=10 format=2]

[ext_resource path="res://appassets/texureassets/ui/updateNotice/newUpdate.png" type="Texture" id=1]
[ext_resource path="res://appassets/texureassets/ui/updateNotice/newVersionUI.png" type="Texture" id=2]
[ext_resource path="res://appassets/texureassets/ui/button/buttonNoUpdate.png" type="Texture" id=3]
[ext_resource path="res://appassets/texureassets/misc/atlas_versionType.atlastex" type="Texture" id=4]
[ext_resource path="res://appassets/texureassets/ui/button/buttonYesUpdate.png" type="Texture" id=5]
[ext_resource path="res://appassets/fontassets/dfd_hexcol.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/VersionChecker.gd" type="Script" id=7]
[ext_resource path="res://scripts/ui/NewUpdateUI.gd" type="Script" id=8]
[ext_resource path="res://scripts/ui/NewVersionUI.gd" type="Script" id=9]

[node name="UpdateUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="NewUpdate" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 125.0
margin_right = 200.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 200, 41 )
mouse_filter = 2
texture_normal = ExtResource( 1 )
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="NewUpdate"]

[node name="NewVersionUI" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -1980.0
margin_right = 1080.0
margin_bottom = 180.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
texture = ExtResource( 2 )
script = ExtResource( 9 )
updateUIPath = NodePath("..")

[node name="Tween" type="Tween" parent="NewVersionUI"]

[node name="VersionType" type="TextureRect" parent="NewVersionUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = 160.0
margin_right = 55.0
margin_bottom = 210.0
texture = ExtResource( 4 )

[node name="VersionNumber" type="Label" parent="NewVersionUI"]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 200.0
margin_bottom = 249.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 6 )
text = "1.0.0"
align = 1

[node name="Yes" type="TextureButton" parent="NewVersionUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = 470.0
margin_right = -22.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 54, 54 )
texture_normal = ExtResource( 5 )

[node name="No" type="TextureButton" parent="NewVersionUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 46.0
margin_top = 470.0
margin_right = 154.0
margin_bottom = 578.0
rect_pivot_offset = Vector2( 54, 54 )
texture_normal = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
